--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding:16px;
+  display:flex; 
+  gap: 16px;
 }
 
 .icon {
@@ -33,7 +36,29 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
 }
+.icon {
+  /* this keeps the icon from getting smashed by the text */
+  flex-shrink: 0;
+}
+
+.header{
+  font-weight:bold;
+  display:flex;
+  justify-content: space-between;
+  align-items:center;
+  font-size: 18px;
+  margin-bottom: 8px;
+}
+
+.text {
+  margin-bottom: 16px;
+}
+
+
+
+
 
 .close-button {
   background: #eee;
@@ -67,3 +92,5 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+
